--- a/css/projects.css
+++ b/css/projects.css
@@ -6,6 +6,7 @@ body::before {
     width: 100%;
     height: 7rem;
     background-image: linear-gradient(to bottom, white 10%, transparent);
+    z-index: 1;
 }
 
 nav {
